<resources>
    <string name="app_name">Słówka</string>
    <string name="list_button">Lista słów</string>
    <string name="add_button">Dodaj słowo</string>
    <string name="game_button">Gra</string>
    <string name="english_detail">Angielski: </string>
    <string name="polish_detail">Polski: </string>
    <string name="category_detail">Kategoria: </string>
    <string name="add_to_base_button">Dodaj!</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="delete_all">Usuń wszystko!</string>
    <string name="delete_all_warning">Uwaga! Usuniesz wszystkie zapisane słówka!</string>
    <string name="confirm">Potwierdzam</string>
    <string name="level_label">Poziom: </string>
    <string name="save_button">Zapisz!</string>
    <string name="add_category">Dodaj kategorię</string>
    <string name="category_name">Nazwa kategorii: </string>
    <string name="categories">Kategorie</string>
</resources>
