<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lukzieniewicz.gmail.com.wordsfinal.WordsClasses.EditWordActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/english_edit_text"
        android:layout_toLeftOf="@+id/english_edit_text"
        android:layout_toStartOf="@+id/english_edit_text"
        android:text="@string/english_detail"
        android:textColor="@color/colorLabel" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/polish_edit_text"
        android:layout_toLeftOf="@+id/polish_edit_text"
        android:layout_toStartOf="@+id/polish_edit_text"
        android:text="@string/polish_detail"
        android:textColor="@color/colorLabel" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/category_edit_text"
        android:layout_toLeftOf="@+id/category_edit_text"
        android:layout_toStartOf="@+id/category_edit_text"
        android:text="@string/category_detail"
        android:textColor="@color/colorLabel"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/english_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"/>

    <EditText
        android:id="@+id/polish_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/english_edit_text"
        android:layout_alignStart="@+id/english_edit_text"
        android:layout_below="@+id/english_edit_text"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"/>

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/polish_edit_text"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSaveClick"
        android:text="@string/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
