<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lukzieniewicz.gmail.com.wordsfinal.AddWordActivity">

    <EditText
        android:id="@+id/english_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/polish_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/english_edit_text"
        android:layout_alignStart="@+id/english_edit_text"
        android:layout_below="@+id/english_edit_text"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/english_edit_text"
        android:layout_toLeftOf="@+id/english_edit_text"
        android:layout_toStartOf="@+id/english_edit_text"
        android:text="@string/english_detail"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/polish_edit_text"
        android:layout_toLeftOf="@+id/polish_edit_text"
        android:layout_toStartOf="@+id/polish_edit_text"
        android:text="@string/polish_detail"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onAddClick"
        android:text="@string/add_to_base_button"/>
</RelativeLayout>
