<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/word_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lukzieniewicz.gmail.com.wordsfinal.WordViewActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="58dp"
        android:text="@string/english_detail"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorLabel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/polish_detail"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorLabel"
        android:layout_below="@+id/english_detail_label"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_label"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorLabel"
        android:layout_below="@+id/polish_detail_label"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="51dp"/>

    <TextView
        android:id="@+id/english_detail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/polish_detail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/level_detail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onEditClick"
        android:text="@string/edit" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_marginBottom="48dp"
        android:background="@color/up_button"
        android:onClick="onUpClick"
        android:text="+" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button5"
        android:background="@color/down_button"
        android:onClick="onDownClick"
        android:text="-" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/level_detail_label"
        android:layout_marginTop="44dp"
        android:text="TextView"
        android:textColor="@color/colorLabel"/>

    <TextView
        android:id="@+id/category_detail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/english_detail_label"
        android:layout_alignStart="@+id/english_detail_label"
        android:layout_alignTop="@+id/textView13"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
</RelativeLayout>
